[package]
name = "fsk"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.1"
ctrlc = { version = "3.4.7", features = ["termination"] }
num-integer = "0.1.46"
num_cpus = "1.17.0"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
